# todo-api

.github/workflows/: ci.yml
todo-api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
todo-api/alembic/: env.py
todo-api/alembic/versions/: 599710e35210_create_todo_table.py
todo-api/app/: db.py  jenkins.py  main.py  models.py  storage.py
todo-api/tests/: test_db.py  test_jenkins.py  test_jenkins_endpoint.py  test_main.py  test_todos.py
